--- a/PassSaver/MainWindow.xaml
+++ b/PassSaver/MainWindow.xaml
@@ -66,7 +66,7 @@
 
 
             <DockPanel Grid.Column="0" Grid.Row="0">
-                <TreeView x:Name="treeView1">
+                <TreeView x:Name="tv_Groups" MouseRightButtonDown="tv_Groups_MouseRightButtonDown">
                     <TreeView.ContextMenu>
                         <ContextMenu>
                             <MenuItem Header="Add Group..."></MenuItem>
@@ -82,6 +82,11 @@
                             <MenuItem Header="Export Group..."></MenuItem>
                         </ContextMenu>
                     </TreeView.ContextMenu>
+                    <TreeView.ItemContainerStyle>
+                        <Style TargetType="TreeViewItem">
+                            <Setter Property="TreeViewItem.IsExpanded" Value="True"/>
+                        </Style>
+                    </TreeView.ItemContainerStyle>
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate ItemsSource="{Binding Path=Nodes}">
                             <TextBlock Text="{Binding Name}" />
